Fixed card height on tablet

--- a/src/components/CountryCard/styles.css
+++ b/src/components/CountryCard/styles.css
@@ -37,3 +37,9 @@
     max-width: 600px;
   }
 }
+
+@media only screen and (max-width: 768px) and (min-width: 520px) {
+  .section__grid-item {
+    height: 400px;
+  }
+}
